--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,5 +2,13 @@
 
 <h1>Home</h1>
 <p><%= homeStartingContent %></p>
+<% 
+posts.forEach((post) => {
+%>
+    <h1><%= post.title %></h1>
+    <p><%= post.body %></p>
+<%
+});
+%>
 
 <%- include('partials/footer'); -%>
