--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,14 +6,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="/css/styles.css" rel="stylesheet">
         <nav class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
                     <p class="navbar-brand">DIALY JOURNAL</p>
                 </div>
-                <ul class="nav navbar-nav navbar-light">
+                <ul class="nav navbar-nav navbar-right">
                     <li id="home"><a href="/">HOME</a></li>
                     <li id="about"><a href="/about">ABOUT</a></li>
                     <li id="contact"><a href="/contact">CONTACT US</a></li>
