--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,9 @@
 posts.forEach((post) => {
 %>
     <h1><%= post.title %></h1>
-    <p><%= post.body %></p>
+    <p>
+        <%= post.body.substring(0,100).concat(" ...") %><a href="<%= `/posts/${post.title}` %>">Read More</a>
+    </p>
 <%
 });
 %>
