--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@ posts.forEach((post) => {
 %>
     <h1><%= post.title %></h1>
     <p>
-        <%= post.body.substring(0,100).concat(" ...") %><a href="<%= `/posts/${post.title}` %>">Read More</a>
+        <%= post.body.substring(0,100).concat(" ...") %><a href="<%= `/posts/${post._id}` %>">Read More</a>
     </p>
 <%
 });
